# mono

./: .gitmodules  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  configure.in  mono-core.spec  notes.txt  repro.cs  repro.sh
data/: Makefile.in
data/gdb/: mono-gdb.py
data/net_1_1/: machine.config
data/net_2_0/: Makefile.in
data/net_4_0/: Makefile.in
data/net_4_5/: Makefile.in
debian/: README.source  changelog  control  copyright  libmono-2.0-1.symbols.armel  libmono-2.0-1.symbols.s390x  libmono-facades-system-collections-cil.install  libmono-facades-system-collections-concurrent-cil.install  libmono-facades-system-componentmodel-annotations-cil.install  libmono-facades-system-componentmodel-cil.install  libmono-facades-system-componentmodel-eventbasedasync-cil.install  libmono-facades-system-diagnostics-contracts-cil.install  libmono-facades-system-diagnostics-debug-cil.install  libmono-facades-system-diagnostics-tools-cil.install  libmono-facades-system-dynamic-runtime-cil.install  libmono-facades-system-globalization-cil.install  libmono-facades-system-io-cil.install  libmono-facades-system-linq-cil.install  libmono-facades-system-linq-expressions-cil.install  libmono-facades-system-linq-parallel-cil.install  libmono-facades-system-linq-queryable-cil.install  libmono-facades-system-net-networkinformation-cil.install  libmono-facades-system-net-primitives-cil.install  libmono-facades-system-net-requests-cil.install  libmono-facades-system-objectmodel-cil.install  libmono-facades-system-reflection-cil.install  libmono-facades-system-reflection-extensions-cil.install  libmono-facades-system-reflection-primitives-cil.install  libmono-facades-system-resources-resourcemanager-cil.install  libmono-facades-system-runtime-cil.install  libmono-facades-system-runtime-extensions-cil.install  libmono-facades-system-runtime-interopservices-cil.install  libmono-facades-system-runtime-numerics-cil.install  libmono-facades-system-runtime-serialization-json-cil.install  libmono-facades-system-runtime-serialization-primitives-cil.install  libmono-facades-system-runtime-serialization-xml-cil.install  libmono-facades-system-security-principal-cil.install  libmono-facades-system-servicemodel-http-cil.install  libmono-facades-system-servicemodel-primitives-cil.install  libmono-facades-system-text-encoding-cil.install  (+42 more)
debian/source/: lintian-overrides
docs/: Makefile.in
eglib/: Makefile.in  aclocal.m4  configure
eglib/m4/: Makefile.in
eglib/src/: Makefile.in  giconv.c
eglib/test/: Makefile.in
ikvm-native/: Makefile.in
libgc/: Makefile.in  aclocal.m4  configure
libgc/doc/: Makefile.in
libgc/include/: Makefile.in
libgc/m4/: Makefile.in
m4/: Makefile.in  mono-output.m4
man/: Makefile.in
mcs/class/: Makefile
mcs/tests/: test-105.cs
mono/: Makefile.am  Makefile.in
mono/arch/: Makefile.in
mono/benchmark/: Makefile.in
mono/cil/: Makefile.in  opcode.def
mono/dis/: Makefile.in
mono/eglib/: giconv.c  gmisc-unix.c  goutput.c  gspawn.c
mono/enc/: README.md  SampleRunner.cs  mono-enc.sh
mono/interpreter/: Makefile.am  Makefile.in  interp.c  interp.h  transform.c
mono/io-layer/: Makefile.in  io.c
mono/metadata/: Makefile.am  Makefile.in  abi-details.h  abi.c  appdomain.c  assembly.c  blob.h  boehm-gc.c  class.c  console-unix.c  debug-internals.h  decimal-ms.c  gc.c  icall-decl.h  icall-def-netcore.h  icall-def.h  icall.c  image.c  loader.c  marshal-ilgen.c  marshal.c  marshal.h  metadata-cross-helpers.c  metadata-internals.h  metadata-update.c  metadata.c  metadata.h  method-builder-ilgen-internals.h  method-builder-ilgen.c  method-builder-ilgen.h  method-builder-internals.h  method-builder.c  method-builder.h  mono-debug.c  object-internals.h  object-offsets.h  object.c  sgen-gc.c  sgen-mono-ilgen.c  sgen-mono.c  (+5 more)
mono/mini/: Makefile.am  Makefile.am.in  Makefile.in  aot-compiler.c  aot-runtime.c  builtin-types.cs  cfgdump.c  cpu-riscv64.md  debugger-agent.c  driver.c  ee.h  exceptions-amd64.c  exceptions-arm.c  (+59 more)
mono/tests/enc/: EncHelper.cs  Makefile.am  Sample3.cs  Sample3_v1.cs
msvc/: Makefile.in  libmonoutils-common.targets  libmonoutils-common.targets.filters
po/: Makefile.in
runtime/: Makefile.in
samples/: Makefile.in
scripts/: Makefile.in
sdks/: versions.mk
support/: Makefile.in  syslog.c
tools/: Makefile.in
(+136 files in other folders)
